# agenda-inteligente

./: .env.example  .env.multiplatform.example  .gitignore  README.md  docker-compose.yml  index.html  makefile  package-lock.json  package.json  tailwind.config.js
backend/: .env  Dockerfile  __init__.py  app.py  dockerfile  entrypoint.sh  models.py  requirements.txt  wait_for_db.py
backend/app/: __init__.py  models.py  routes.py
backend/routes/: __init__.py  google_events.py
db/: schema.sql  seed.sql  seed_tasks.sql
desktop/: README.md  package.json
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
frontend/: .env.local  .gitignore  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: Calendar.tsx  CrearEventoModal.tsx  EditarEventoModal.tsx  EventCard.tsx  Header.tsx  LoadingSpinner.tsx  ServiceWorkerRegistrar.tsx  Sidebar.tsx  ThemeProvider.tsx
frontend/hooks/: useDashboardData.ts
frontend/lib/: api.ts  auth.ts  db.ts  events.ts  google.ts  smartAvailability.ts  swr.ts  tasks.ts
frontend/public/: manifest.json  sw.js
frontend/scripts/: verify-passwords.js
frontend/src/: App.jsx  config.js
frontend/styles/: globals.css  theme.css
frontend/types/: bcryptjs.d.ts  dashboard.ts  sqlite3.d.ts
init_db/: init_db.sql
mobile/: README.md  capacitor.config.ts  package.json  tsconfig.json
scripts/: check_db.sh
src/: App.jsx
src/components/: Button.jsx  Card.jsx  Input.jsx  Loader.jsx  Logo.jsx  (+4 more)
(+81 files in other folders)
