[package]
name = "agenda-inteligente-desktop"
version = "0.1.0"
edition = "2021"
description = "Wrapper de escritorio para Agenda Inteligente"
authors = ["Agenda Inteligente Team"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.5", features = ["shell-open"] }
